<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalculatorActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/wall_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calculate_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:background="#99BFCBCC"
            android:gravity="right|bottom"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:text="first string" />

        <TextView
            android:id="@+id/result_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#99BFCBCC"
            android:gravity="right|bottom"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:text="second string" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:columnCount="4">

            <Button
                android:id="@+id/del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:backgroundTint="#000000"
                android:text="@string/key_del"
                android:textColor="#BFCBCC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_clear"
                android:textColor="#BFCBCC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_division"
                android:textColor="#BFCBCC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_multi"
                android:textColor="#BFCBCC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_percentage"
                android:textColor="#BFCBCC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/key_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_7"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/key_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_8"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/key_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_9"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_dot"
                android:textColor="#BFCBCC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/key_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_4"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/key_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_5"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/key_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_6"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_minus"
                android:textColor="#BFCBCC"
                android:textSize="18sp" />

            <Button
                android:id="@+id/key_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_1"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/key_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_2"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/key_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_3"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowSpan="3"
                android:layout_gravity="fill_vertical"
                android:backgroundTint="#99BFCBCC"
                android:text="@string/key_plus"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/key_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:backgroundTint="#000000"
                android:text="@string/key_0"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/double_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:text="@string/key_00"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/result"
                android:layout_columnSpan="3"
                android:layout_gravity="fill"
                android:backgroundTint="#99BFCBCC"
                android:text="@string/key_result"
                android:textColor="#000000" />

        </GridLayout>
    </LinearLayout>

</FrameLayout>